--- a/index.html
+++ b/index.html
@@ -6,17 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>予約フォーム</title>
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f4f4f9;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
-            margin: 0;
-            padding-top: 20px;
-            overflow-x: hidden;
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #0a0a0a; /* ダークモード */
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+    margin: 0;
+    padding-top: 5px;
+    overflow-x: hidden;
+    position: relative;
+
+    /* ダークグラデーション */
+    background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0a0a0a 100%);
+
+    /* ネオンストライプ */
+    background-image: linear-gradient(45deg, rgba(0, 255, 170, 0.15) 25%, transparent 25%, transparent 50%, rgba(0, 255, 170, 0.15) 50%, rgba(0, 255, 170, 0.15) 75%, transparent 75%, transparent);
+    background-size: 40px 40px;
+}
+
+        .background-effect::before {
+            content: "";
+            position: absolute;
+            top: -50px;
+            left: 50%;
+            width: 350px;
+            height: 350px;
+            background: none;
+            border: 15px solid rgba(255, 255, 255, 0.6);
+            border-radius: 50%;
+            transform: translateX(-50%);
+            opacity: 0.7;
         }
+
+        .background-effect::after {
+            content: "";
+            position: absolute;
+            bottom: -60px;
+            right: 5%;
+            width: 280px;
+            height: 280px;
+            background: none;
+            border: 12px solid rgba(255, 255, 255, 0.4);
+            border-radius: 50%;
+            opacity: 0.6;
+        }
+
 
         .container {
             background-color: #fdfdfd;
@@ -481,20 +517,47 @@
         }
 
         .highlight-background {
-            cursor: pointer;
-            background-color: #13ca5e;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 18px;
-            /* テキストを読みやすく */
-            display: flex;
-            justify-content: center;
-            /* オプションを中央寄せ */
-            align-items: center;
-            position: relative;
-            /* プラス記号を右端に配置 */
-        }
+    cursor: pointer;
+    background-color: #13ca5e;
+    padding: 10px;
+    border-radius: 6px;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.highlight-background::before {
+    content: "";
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    width: 350px;
+    height: 350px;
+    background: none;
+    border: 15px solid rgba(255, 255, 255, 0.6);
+    border-radius: 50%;
+    transform: translateX(-50%);
+    opacity: 0.7;
+}
+
+.highlight-background::after {
+    content: "";
+    position: absolute;
+    bottom: -60px;
+    right: 5%;
+    width: 280px;
+    height: 280px;
+    background: none;
+    border: 12px solid rgba(255, 255, 255, 0.4);
+    border-radius: 50%;
+    opacity: 0.6;
+}
 
         .symptoms,
         .options {
