--- a/index.html
+++ b/index.html
@@ -6,53 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>予約フォーム</title>
     <style>
-body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #0a0a0a; /* ダークモード */
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    margin: 0;
-    padding-top: 5px;
-    overflow-x: hidden;
-    position: relative;
-
-    /* ダークグラデーション */
-    background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0a0a0a 100%);
-
-    /* ネオンストライプ */
-    background-image: linear-gradient(45deg, rgba(0, 255, 170, 0.15) 25%, transparent 25%, transparent 50%, rgba(0, 255, 170, 0.15) 50%, rgba(0, 255, 170, 0.15) 75%, transparent 75%, transparent);
-    background-size: 40px 40px;
-}
-
-        .background-effect::before {
-            content: "";
-            position: absolute;
-            top: -50px;
-            left: 50%;
-            width: 350px;
-            height: 350px;
-            background: none;
-            border: 15px solid rgba(255, 255, 255, 0.6);
-            border-radius: 50%;
-            transform: translateX(-50%);
-            opacity: 0.7;
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #e7e7e7;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            height: 100vh;
+            margin: 0;
+            padding-top: 5px;
+            overflow-x: hidden;
         }
-
-        .background-effect::after {
-            content: "";
-            position: absolute;
-            bottom: -60px;
-            right: 5%;
-            width: 280px;
-            height: 280px;
-            background: none;
-            border: 12px solid rgba(255, 255, 255, 0.4);
-            border-radius: 50%;
-            opacity: 0.6;
-        }
-
 
         .container {
             background-color: #fdfdfd;
@@ -80,35 +44,6 @@ body {
             overflow: hidden;
         }
 
-        h1::before {
-            content: "";
-            position: absolute;
-            top: -80px;
-            left: 50%;
-            width: 350px;
-            height: 350px;
-            background: none;
-            border: 25px solid rgba(255, 255, 255, 0.7);
-            /* かなり太め！ */
-            border-radius: 50%;
-            transform: translateX(-50%);
-            opacity: 0.8;
-        }
-
-        h1::after {
-            content: "";
-            position: absolute;
-            bottom: -90px;
-            right: 5%;
-            width: 280px;
-            height: 280px;
-            background: none;
-            border: 20px solid rgba(255, 255, 255, 0.5);
-            /* こちらも超太め！ */
-            border-radius: 50%;
-            opacity: 0.7;
-        }
-
         .label {
             display: block;
             margin-bottom: 10px;
@@ -125,33 +60,20 @@ body {
             overflow: hidden;
         }
 
-        .label::before {
-            content: "";
-            position: absolute;
-            top: -50px;
-            left: 50%;
-            width: 350px;
-            height: 350px;
-            background: none;
-            border: 15px solid rgba(255, 255, 255, 0.6);
-            /* 太めの白ライン */
-            border-radius: 50%;
-            transform: translateX(-50%);
-            opacity: 0.7;
-        }
-
-        .label::after {
-            content: "";
-            position: absolute;
-            bottom: -60px;
-            right: 5%;
-            width: 280px;
-            height: 280px;
-            background: none;
-            border: 12px solid rgba(255, 255, 255, 0.4);
-            /* もう1本のライン */
-            border-radius: 50%;
-            opacity: 0.6;
+        .labelContent {
+            display: block;
+            margin-bottom: 10px;
+            padding: 3px;
+            font-weight: 600;
+            background-color: #13ca5e;
+            color: white;
+            border-radius: 6px;
+            text-align: center;
+            /* 中央揃え */
+            text-indent: 0px;
+            /* テキストを右に20pxずらす */
+            position: relative;
+            overflow: hidden;
         }
 
         /* 必須マークのスタイル */
@@ -517,47 +439,20 @@ body {
         }
 
         .highlight-background {
-    cursor: pointer;
-    background-color: #13ca5e;
-    padding: 10px;
-    border-radius: 6px;
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.highlight-background::before {
-    content: "";
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    width: 350px;
-    height: 350px;
-    background: none;
-    border: 15px solid rgba(255, 255, 255, 0.6);
-    border-radius: 50%;
-    transform: translateX(-50%);
-    opacity: 0.7;
-}
-
-.highlight-background::after {
-    content: "";
-    position: absolute;
-    bottom: -60px;
-    right: 5%;
-    width: 280px;
-    height: 280px;
-    background: none;
-    border: 12px solid rgba(255, 255, 255, 0.4);
-    border-radius: 50%;
-    opacity: 0.6;
-}
+            cursor: pointer;
+            background-color: #13ca5e;
+            padding: 10px;
+            border-radius: 6px;
+            font-size: 18px;
+            font-weight: 600;
+            color: white;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
         .symptoms,
         .options {
@@ -652,15 +547,20 @@ body {
 
         /* 必須マークのスタイル */
         .required {
-            color: #fffb00;
+            color: #ffffff;
             /* ゴールド（黄色） */
-            font-weight: bold;
-            font-size: 0.9em;
+            font-weight: lighter;
+            /* 文字を細くする */
+            font-size: 0.6em;
             margin-left: 5px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            /* 強めの影で視認性アップ */
-            vertical-align: 0.4em;
+            vertical-align: 0.8em;
             /* 位置を少し上に調整 */
+
+            /* 白色背景の四角形 */
+            background-color: rgb(255, 15, 15);
+            padding: 0 5px;
+            border-radius: 3px;
+            margin-right: 5px;
         }
 
         .current-month {
@@ -689,19 +589,19 @@ body {
     <div class="container">
         <h1>予約フォームA<br>予約フォーム
         </h1>
-        <div class="label">お客様名<span class="required">＊</span></div>
+        <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
 
-        <div class="label">電話番号<span class="required">＊</span></div>
+        <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">ご来店回数<span class="required">＊</span></div>
+        <div class="label">ご来店回数<span class="required">必須</span></div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
         </div>
 
-        <div class="label" id="course">メニューをお選びください<span class="required">＊</span></div>
+        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">ブライダルコース</button>
@@ -805,7 +705,7 @@ body {
             </div>
         </div>
 
-        <div class="label">希望日時<span class="required">＊</span></div>
+        <div class="label">希望日時<span class="required">必須</span></div>
         <div class="calendar-container">
             <!-- 月を独立して配置 -->
             <div class="current-month-container">
@@ -851,7 +751,7 @@ body {
         <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <div class="label">ご予約内容</div>
+        <div class="labelContent">ご予約内容</div>
         <div id="displayInfo"></div> <!-- ここに選択された情報を表示します -->
 
         <button class="submit-button" onclick="submitForm()">予約を行う</button>
