--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             background-color: #13ca5e;
             color: white;
             border-radius: 6px;
+            font-size: 18px;
             text-align: center;
             /* 中央揃え */
             text-indent: 20px;
@@ -68,6 +69,7 @@
             background-color: #13ca5e;
             color: white;
             border-radius: 6px;
+            font-size: 18px;
             text-align: center;
             /* 中央揃え */
             text-indent: 0px;
